Prepare ability to make commands dependant on commit at hand